--- a/package.json
+++ b/package.json
@@ -6,9 +6,12 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "deploy": "gh-pages -d dist",
+    "b&d": "npm run build && gh-pages -d dist"
   },
   "dependencies": {
+    "element-plus": "^2.8.4",
     "vue": "^3.4.37"
   },
   "devDependencies": {
