--- a/package.json
+++ b/package.json
@@ -8,11 +8,13 @@
     "build": "vite build",
     "preview": "vite preview",
     "deploy": "gh-pages -d dist",
-    "b&d": "npm run build && gh-pages -d dist"
+    "b/d": "npm run build && gh-pages -d dist"
   },
   "dependencies": {
+    "dayjs": "^1.11.13",
     "element-plus": "^2.8.4",
-    "vue": "^3.4.37"
+    "vue": "^3.4.37",
+    "vue-router": "^4.4.5"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.1.2",
